feat: integrate Ant Design components and improve UI
- Added Ant Design dependencies to package.json.
- Refactored CategoryManager to use Ant Design's Button and Input components.
- Simplified CsvExport component to use a unified download function for CSV exports.
- Enhanced Dashboard component with Chart.js for better data visualization.
- Improved SalesEditor with error handling and loading states.
- Created reusable UI components: Button, Card, Input, and Select.
- Implemented a global layout in the main application file with navigation and dark mode toggle.
- Added global styles for Tailwind CSS and dark mode support.
- Configured TypeScript for the frontend project.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@ build/
 
 # Environment and local files
 .env*
-!.env.example
+.env
+*.env
+.env.local
+.env.*.local
 .local
 .cache
 *.log
@@ -42,3 +45,30 @@ backend/smartmart.db
 *.sqlite3
 coverage/
 .mypy_cache/
+
+# Frontend specific
+.next
+.nuxt
+dist
+.cache/
+.parcel-cache/
+.output
+storybook-static/
+
+# Testing
+coverage/
+.nyc_output/
+junit.xml
+test-results/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*~
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+debug.log
