--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,16 @@
 setuptools>=65.5.1
 wheel>=0.40.0
-fastapi==0.89.1
+fastapi>=0.68.0,<0.69.0
 uvicorn==0.24.0
-sqlalchemy==2.0.23
+sqlalchemy==1.4.50
 python-multipart==0.0.6
 numpy>=2.2.0
 pandas>=2.2.0
-pydantic==1.10.13
+pydantic>=1.8.0,<2.0.0
 python-jose==3.3.0
 passlib==1.7.4
 bcrypt==4.0.1
 python-dateutil==2.8.2
 openpyxl==3.1.2
+psycopg2-binary>=2.9.0,<3.0.0
+python-dotenv>=0.19.0,<0.20.0
