--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "antd": "^5.25.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "next": "^14.2.28",
