--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,31 @@ venv/
 .pytest_cache/
 .coverage
 htmlcov/
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+.installed.cfg
+*.egg
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.next/
+.nuxt/
+dist/
+build/
 
 # IDE and OS
 .idea/
@@ -39,12 +64,22 @@ htmlcov/
 *.swo
 .DS_Store
 Thumbs.db
+*~
 
 # Project specific
 backend/smartmart.db
 *.sqlite3
 coverage/
 .mypy_cache/
+backend/logs/
+frontend/.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Database
+*.sqlite3
+*.db
 
 # Frontend specific
 .next
@@ -72,3 +107,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 debug.log
+
+# Logs
+logs/
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
