--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.25.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "http-proxy-middleware": "^3.0.5",
     "next": "^14.2.28",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -27,6 +28,7 @@
     "@types/react": "^18.2.38",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vite": "^6.3.5"
   }
 }
