--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "antd": "^5.25.0",
@@ -21,13 +24,16 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
-    "tailwindcss": "^3.3.5"
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
     "vite": "^6.3.5"
   }
